<resources>
    <string name="app_name">Sync</string>
    <string name="name">Seu nome</string>
    <string name="to_go_out">Sair</string>
    <string name="edit">Editar</string>
    <string name="return_">Voltar</string>
    <string name="show_Event">Detalhes do evento</string>
    <string name="synchronize">Sincronizar Automaticamente </string>
    <string name="taskTitle">Adicionar título</string>
    <string name="add_new_event">Adicionar novo evento</string>
    <string name="keepMeConnected">Mantenha-me conectado</string>
    <string name="descriptionPlaceholder">Adicionar descrição</string>
    <string name="descriptionDescriptionIcon">Ícone de descrição</string>
    <string name="descriptionCalendarIcon">Ícone de calendário</string>
    <string name="descriptionScheduleIcon">Ícone de horário</string>
    <string name="descriptionNotificationIcon">Ícone de notificação</string>
    <string name="descriptionTitleTask">Ícone de título</string>
    <string name="descriptionCheckbox">Ícone de checkbox</string>
    <string name="descriptionCircleColorIcon">Ícone de cor</string>
    <string name="descriptionRepeatIcon">Ícone de repetir</string>
    <string name="descriptionCategoryIcon">Ícone de categoria</string>
    <string name="descriptionLocationIcon">Ícone de localização</string>
    <string name="descriptionImportIcon">Ícone de importação</string>
    <string name="receiveNotification">Receber notificação</string>
    <string name="colorTask">Cor da tarefa</string>
    <string name="fullDay">Dia inteiro</string>
    <string name="cancel">Cancelar</string>
    <string name="save">Salvar</string>
    <string name="space">-</string>
    <string name="login">Login</string>
    <string name="email">E-mail</string>
    <string name="password">Senha</string>
    <string name="job">Trabalho</string>
    <string name="category">Categoria</string>
    <string name="location">Localização</string>
    <string name="on">Ativada</string>

    <string name="category_example">Prova</string>
    <string name="activated">Ativado</string>
    <string name="data">Data</string>
    <string name="data_example">01/10/2025</string>
    <string name="description_example">Do slide 1 ao slide 9</string>
    <string name="description">Descrição</string>
    <string name="title">Título</string>
    <string name="title_example">Prova de dispositivos móveis</string>
    <string name="hour">Horário</string>
    <string name="hours">Horário</string>
    <string name="notification">Notificações</string>
    <string name="edit_events">Editar evento </string>
    <string name="weekly">Semanal</string>
    <string name="repeat">Repetição</string>
    <string name="detailsEvent">Detalhes do evento</string>
    <string name="synchronizedd">Sincronizado com</string>
    <string name="synchronizeddGoogleandRubeus">Google e Rubeus </string>
    <string name="repeat_example">Semanalmente</string>
    <string name="locationexample">Pavilhão de Aulas II - Avenida PH Rolfs</string>
    <string name="noregister"> Ainda não possui cadastro? </string>
    <string name="register">Cadastrar </string>
    <string name="saveData">Manter Logado</string>
    <string name="EnterEmail">Digite seu e-mail</string>
    <string name="EnterPassword">Digite sua senha </string>
    <string name="selectDate">Selecione uma data</string>
    <string name="selectTime">Selecione um horário</string>
    <string name="startTime">Início</string>
    <string name="endTime">Fim</string>
    <string name="noRepeat">Não repetir</string>
    <string name="everyDay">Todos os dias</string>
    <string name="everyWeek">Todas as semanas</string>
    <string name="everyMonth">Todos os meses</string>
    <string name="syncToRubeus">Rubeus</string>
    <string name="syncToGoogle">Google</string>
    <string name="selectLocation">Escolha uma localização</string>
    <string name="selectCategory">Escolha uma categoria</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="back">Voltar</string>
    <string name="Event">Evento</string>
    <string name="yourName">Seu nome aqui </string>
    <string name="hour_example">8:00 ás 9:00</string>
    <string name="delete">Excluir</string>
    <string name="large_text">


        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the userModel in the experience.\n"
        "An emphasis on userModel actions makes core functionality immediately apparent and provides "
        "waypoints for the userModel.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the userModel as the prime mover. Primary userModel actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the userModel without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to userModel input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input eventModel is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "userModel picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a userModel tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings">Settings</string>
    <string name="taskLocation">Localização</string>
    <string name="locationIconDescription">Ícone de localização</string>
    <string name="googleFieldsLabel">Campos Google</string>
    <string name="wait_for_events_loading_calendar">Aguarde o carregamento dos eventos...</string>
    <string name="locationLabelDetails">Localização</string>
    <string name="googleMeetMockDetails">Google Meet</string>
    <string name="rubeusTypeIconLabel">Ícone de tipo da Rubeus</string>
    <string name="rubeusTypeLabelDetails">Tipo</string>
    <string name="rubeusTypeMockDetails">Visita</string>
</resources>