<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateTask">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="50dp"
        android:layout_marginHorizontal="30dp"
        tools:ignore="UselessParent">

<!--        Título da tarefa-->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginVertical="15dp"
            android:gravity="center">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/title_icon"
                android:contentDescription="@string/descriptionTitleTask" />
            <EditText
                android:id="@+id/editTextTaskTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:hint="@string/taskTitle"
                android:inputType="text"
                android:ems="100"
                android:background="@null"
                tools:ignore="Autofill" />
        </LinearLayout>

<!--         Descrição da tarefa-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginVertical="15dp"
            android:gravity="center">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/description_icon"
                android:contentDescription="@string/descriptionDescriptionIcon"/>
            <EditText
                android:id="@+id/editTextTaskDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:inputType="text"
                android:ems="150"
                android:background="@null"
                android:hint="@string/descriptionPlaceholder"
                tools:ignore="Autofill" />
        </LinearLayout>

<!--        Dia da tarefa-->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginVertical="5dp"
            android:gravity="center">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnDatePicker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/selectDate"
                android:layout_margin="0dp"
                style="?android:attr/buttonBarButtonStyle"
                app:icon="@drawable/calendar_icon"
                app:iconSize="24dp"/>
            <TextView
                android:id="@+id/textViewDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

<!--        Horário da tarefa-->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginVertical="5dp"
            android:gravity="center">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnTimePicker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:icon="@drawable/schedule_icon"
                app:iconSize="24dp"
                android:layout_margin="0dp"
                style="?android:attr/buttonBarButtonStyle"
                android:text="@string/selectTime" />
            <TextView
                android:id="@+id/textViewTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fullDay"/>
        </LinearLayout>

<!--        Notificação da tarefa-->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginVertical="10dp">
            <ImageView
                android:id="@+id/imageViewNotification"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/notifications_icon"
                android:text="@string/receiveNotification"
                android:contentDescription="@string/descriptionNotificationIcon" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/receiveNotification"
                android:layout_marginHorizontal="10dp"/>
        </LinearLayout>

<!--        Cor da tarefa-->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginVertical="10dp"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/descriptionCircleColorIcon"
                android:src="@drawable/circle_icon"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/colorTask"
                android:layout_marginHorizontal="10dp"/>
        </LinearLayout>

<!--        Botões da tarefa-->
        <LinearLayout
            style="?android:attr/buttonBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginVertical="10dp">

            <Button
                android:id="@+id/btnCancel"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancel"
                android:layout_marginHorizontal="20dp"
                android:onClick="cancelTask" />

            <Button
                android:id="@+id/btnSave"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/save"
                android:layout_marginHorizontal="20dp"
                android:onClick="createTask"/>
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>