<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="10dp"
        android:paddingTop="0dp"
        android:gravity="top|center_horizontal">

        <ImageView
            android:id="@+id/imageLogo"
            android:layout_width="180dp"
            android:layout_height="180dp"
            android:layout_marginTop="100dp"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter"
            android:src="@drawable/logo" />


        <EditText
            android:id="@+id/editTextEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="E-mail"
            android:drawablePadding="10dp"
            android:padding="12dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:drawableStart="@drawable/person"
            android:background="@drawable/border_green"
            android:layout_marginBottom="16dp" />

        <EditText
            android:id="@+id/editTextSenha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:drawablePadding="10dp"
            android:padding="12dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:drawableStart="@drawable/baseline_lock_24"
            android:background="@drawable/border_green"
            android:layout_marginBottom="8dp" />

        <CheckBox
            android:id="@+id/checkboxKeepMeConnected"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/keepMeConnected"
            android:textColor="@color/green"
            android:layout_marginBottom="16dp" />

        <Button
            android:id="@+id/buttonLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:backgroundTint="@color/green"
            android:textColor="@color/white"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="16dp"
            android:onClick="onClickLogin"
            />




    </LinearLayout>
</ScrollView>
